# pdf2md

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh.md  pdf2md.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
docs/: API.md  EXAMPLES.md  LESSONS.md  PROGRESS.md  PROJECT_SUMMARY.md  RELEASE.md  TROUBLESHOOTING.md
docs/superpowers/specs/: 2026-04-17-pdf2md-design.md  2026-04-17-pdf2md-implementation-design.md
pdf2md/: __init__.py
pdf2md/cli/: __init__.py  main.py
pdf2md/core/: __init__.py  page_processor.py  pipeline.py  resource_manager.py
pdf2md/deduplicator/: __init__.py  chapter_detector.py  edge_text.py  header_footer.py
pdf2md/extractor/: __init__.py  image_extractor.py  layout_analyzer.py  pdfplumber_types.py  table_extractor.py  text_extractor.py
pdf2md/markdown/: __init__.py  generator.py  linker.py  table_formatter.py
pdf2md/ocr/: __init__.py  base.py  paddleocr.py
pdf2md/summary/: __init__.py  ai_assistant.py  extractor.py  rule_based.py
pdf2md/utils/: __init__.py  file_manager.py  logger.py  progress.py
tests/integration/: test_cli.py  test_pipeline.py
tests/unit/: test_deduplicator.py  test_extractor.py  test_markdown.py  test_ocr.py  test_summary.py  test_utils.py
